# researchpad

./: .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  Makefile  OPEN_SOURCE_REFACTOR.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish-docs.yml  publish-pypi.yml  tests.yml
api/reference/: index.html
changelog/: index.html
commands/debug/: index.html
commands/experiment/: index.html
commands/explain/: index.html
commands/research/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: reference.md
docs/commands/: debug.md  experiment.md  explain.md  research.md
docs/features/: dashboard.md  debug.md  experiments.md  insights.md  research.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/stylesheets/: extra.css
features/dashboard/: index.html
features/debug/: index.html
features/experiments/: index.html
features/insights/: index.html
features/research/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
researchpad/: __init__.py
researchpad/cli/: init.py  main.py  runserver.py
researchpad/templates/: RESEARCHPAD.md
researchpad/templates/.researchpad/experiments/: insights.md
researchpad/templates/commands/: debug.md  experiment-bold.md  experiment.md  explain.md  research.md
search/: search_index.json
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
src/frontend/src/: index.css  main.tsx  router.tsx
src/frontend/src/contexts/: loop-context.tsx  theme-context.tsx
src/frontend/src/hooks/: use-debug.ts  use-experiment-detail.ts  (+6 more)
src/server/: build.mjs  package-lock.json  package.json  tsconfig.json
src/server/src/: index.ts
tests/: test_cli.py  test_init.py
(+35 files in other folders)
