[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchpad"
dynamic = ["version"]
description = "AI-powered autonomous ML experimentation companion"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "ResearchPad Contributors"}
]
keywords = ["machine-learning", "experiments", "ai", "automation", "ml-ops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/researchpad/researchpad"
Documentation = "https://researchpad.github.io/researchpad"
Repository = "https://github.com/researchpad/researchpad"
Issues = "https://github.com/researchpad/researchpad/issues"

[project.scripts]
researchpad = "researchpad.cli.main:main"

[tool.setuptools.dynamic]
version = {attr = "researchpad.__version__.__version__"}

[tool.setuptools.packages.find]
include = ["researchpad*"]

[tool.setuptools.package-data]
researchpad = [
    "server/**/*",
    "templates/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
